--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/images/pic4.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Arpan Saini</title>
+    <title>arpan saini-Google Search</title>
   </head>
   <body>
     <div id="root"></div>
